# Helper file to handle all configs

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    mphat/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest

[options.entry_points]
console_scripts =
    w_extract = mphat.extract:entry_point
    w_discretize = mphat.discretize:entry_point
    w_match = mphat.match:entry_point
    w_all = mphat.mphat:entry_point