# Helper file to handle all configs

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    lpath/_version.py

[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8packages=, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest

[options.entry_points]
console_scripts =
    lpath = lpath.lpath:entry_point